kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docs
  labels:
    app: plaid
    plaid: docs
spec:
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      name: docs-pod
      labels:
        app: plaid
        plaid: docs
    spec:
      containers:
      - name: docs
        image: docker.io/plaidcloud/docs:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 250Mi  
        livenessProbe:
          httpGet:
            path: /docs/
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /docs/
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
      imagePullSecrets:
      - name: dockerhub-key
