kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docs
  labels:
    app: plaid
    plaid: docs
spec:
  rules:
  - host: plaidcloud.local
    http:
      paths:
      - path: /docs
        backend:
          serviceName: docs
          servicePort: 80
